tests/files/flow_controller_tests/should_run/064.cmdr
x = 10;
print round(x);