tests/files/flow_controller_tests/should_fail/039.cmdr
x = false;
print round(x);